# datagov-11ty

./: .codespellrc  .eleventy.js  .eleventyignore  .env  .gitignore  .pa11yci  .pa11yci.js  .snyk  .wokeignore  CONTRIBUTING.md  README.md  about.md  admin.html  contact.md  cypress.config.js  index.html  package-lock.json  package.json  postcss.config.js  redirect_topics.html  set_path_prefix.sh  sitemap.xml.njk  test.html
.github/: dependabot.yml  snyk_failure.md
_data/: arctic-tools.json  assetPaths.json  authors.json  catalog.js  climate-portals.json  climate-toolkits.json  climate-tools.json  dashboard.js  ecosystem-vulnerability-tools.json  energy-infrastructure-tools.json  foodresilience-tools.json  helpers.js  humanhealth-tools.json  metrics.js  site.yaml  transportation-tools.json  tribal-nations-tools.json  water-tools.json
_img/: dataGov-homepage-icons.ai
_includes/: banner.html  beta_banner.html  footer.html  header.html  identifier.html  logo.html  menu.html  meta.html  pagination-links.html  scripts.html  sidenav.html  update.html  updates.html
about/: index.md
admin/: config.yml  index.html
config/: buildAssets.js  headingLinks.js  index.js  shortCodes.js
dashboard/: pyproject.toml
dashboard/datagov_metrics/: poc.py
importer/: importer.js
js/: app.js  fetch-dashboard.js  fetch-index.js  fetch.js  fetchDashboard.js
maintenance/: federal-government-shutdown.html
metrics/: pyproject.toml
pages/: 2013-04-04-open-data-a-history.md  2013-05-23-datagov-launches-new-catalog-and-apis.md  2014-02-20-climate-resources.md  404.html  404.md  (+31 more)
(+296 files in other folders)
